fixed word wrap for title

--- a/src/App.css
+++ b/src/App.css
@@ -514,6 +514,8 @@
   line-height: 26px;
   letter-spacing: -0.01em;
   text-align: left;
+  word-wrap: break-word;
+  display: inline-block;
 }
 
 .viewListMiddleContainer {
@@ -521,6 +523,7 @@
   height: 40px;
   display: flex;
   align-items: center;
+  word-wrap: break-word;
   margin: 0 0 24px 0;
 }
 
